--- a/Selenium/plantilla/templates/blog.html
+++ b/Selenium/plantilla/templates/blog.html
@@ -5,7 +5,7 @@
     window.onload = function() {
         setTimeout(function() {
             document.getElementById('posts').style.display = 'block';
-        }, 3000);
+        }, 1500);
     };
 
     </script>
@@ -14,31 +14,32 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Seminario de Sistemas</a>
+        <a class="navbar-brand" href="{{ url_for('homepage') }}">Seminario de Sistemas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('homepage') }}">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{ url_for('blog_page') }}">Blog <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('homepage') }}">Crear tarea</a>
+              <a class="nav-link" href="{{ url_for('add_post') }}">Crear publicacion</a>
             </li>
           </ul>
         </div>
     </nav>
 
-    <div class="container">
-        <h3>Pagina principal</h3>
-
+    <div class="container mt-3">
+        <h3>Publicaciones:</h3>
         {% if posts|length > 0 %}
         <ol id="posts" style="display: none">
             {% for post in posts %}
             <li class="post"><a href="{{ url_for('see_post', title=post['title']) }}" class="post-link">{{ post['title'] }}</a></li>
             {% endfor %}
         </ol>
+        {% else %}
+        <p class="font-italic">No existen publicaciones creadas de momento...</p>
         {% endif %}
     </div>
     
