--- a/Selenium/plantilla/templates/new_post.html
+++ b/Selenium/plantilla/templates/new_post.html
@@ -4,22 +4,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Create post</h1>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('homepage') }}">Seminario de Sistemas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{ url_for('blog_page') }}">Blog <span class="sr-only">(current)</span></a>
+              </li>
+          </ul>
+        </div>
+    </nav>
+    <div class="container">
+        <h2 class="mt-4 mb-4">Crear publicacion</h2>
 
-    <a href="{{ url_for('blog_page') }}" class="nav-link" id="blog-link">Back to blog</a>
+        <div class="row">
+            <div class="col-6">
+                <form method="POST" id="post-form">
+                    <div class="form-group">
+                        <label for="title">Titulo:</label>
+                        <input class="form-control" type="text" name="title" id="title"  autocomplete="off"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="content">Descripcion:</label>
+                        <textarea class="form-control" name="content" id="content"></textarea>
+                    </div>
+                        <button class="btn btn-success btn-block" type="submit" id="create-post">Crear</button>
+                </form>
+            </div>
+        </div>
 
-    <form method="POST" id="post-form">
-        <div>
-            <label for="title">Post title:</label>
-            <input type="text" name="title" id="title" />
-        </div>
-        <div>
-            <label for="content">Post content:</label>
-            <textarea name="content" id="content"></textarea>
-        </div>
-        <div>
-            <button type="submit" id="create-post">Create</button>
-        </div>
-    </form>
+    </div>
 </body>
 </html>
