[Taller 3] Se agregaron ids a los elementos para poder seleccionar el elemento cuando se haga una prueba automatizada.

--- a/Selenium/plantilla/templates/home.html
+++ b/Selenium/plantilla/templates/home.html
@@ -88,7 +88,7 @@
                       </p>
                   </div>
                   <div class="col-lg-8 align-self-baseline">
-                      <a class="btn btn-primary btn-xl" href="{{ url_for('blog_page') }}">Ingresar</a>
+                      <a class="btn btn-primary btn-xl" href="{{ url_for('blog_page') }}" id="blog-link">Ingresar</a>
                   </div>
               </div>
           </div>
