--- a/Selenium/plantilla/templates/blog.html
+++ b/Selenium/plantilla/templates/blog.html
@@ -14,17 +14,14 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{ url_for('homepage') }}">Seminario de Investigacion</a>
+        <a class="navbar-brand" href="{{ url_for('homepage') }}" id="home-link">Seminario de Investigacion</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('blog_page') }}">Blog <span class="sr-only">(current)</span></a>
-            </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('add_post') }}">Crear publicacion</a>
+              <a class="nav-link" href="{{ url_for('add_post') }}" id="add-post-link">Crear publicacion</a>
             </li>
           </ul>
         </div>
