--- a/Selenium/plantilla/templates/new_post.html
+++ b/Selenium/plantilla/templates/new_post.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('blog_page') }}">Blog <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{{ url_for('blog_page') }}" id="blog-link">Blog <span class="sr-only">(current)</span></a>
               </li>
           </ul>
         </div>
